Login layout issues fixed.

--- a/AlexRogoBeltApp/Content/Memberstyle.css
+++ b/AlexRogoBeltApp/Content/Memberstyle.css
@@ -486,3 +486,7 @@ ul {
     width:100% !important;
     max-width:100%;
 }
+.form-control, .form-control:focus {
+    box-shadow: none !important;
+    border: 1px solid #ccc !important;
+}
